--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ cachetools==5.5.2
 certifi==2025.1.31
 charset-normalizer==3.4.1
 google-api-core==2.24.2
-google-api-python-client==2.166.0
+google-api-python-client==2.108.0
 google-auth==2.38.0
 google-auth-httplib2==0.2.0
 googleapis-common-protos==1.69.2
@@ -17,3 +17,4 @@ requests==2.32.3
 rsa==4.9
 uritemplate==4.1.1
 urllib3==2.3.0
+python-dotenv==1.0.0
